--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -1,47 +1,42 @@
-image: barichello/godot-ci:3.4.2
+name: "godot-ci export"
+on: push
 
-# NOTE: the `cd` command in each build stage is not necessary if your
-# project.godot is at the repo root
+env:
+  GODOT_VERSION: 3.3.4
+  EXPORT_NAME: materialmaker-playground
 
-# Cache imported assets between runs
-cache:
-  key: import-assets
-  paths:
-    - .import/
-
-stages:
-  - export
-  - deploy
-
-variables:
-  EXPORT_NAME: test-project
-
-web:
-  stage: export
-  script:
-    - mkdir -v -p build/web
-    - cd $EXPORT_NAME
-    - godot -v --export "HTML5" ../build/web/index.html
-  artifacts:
-    name: $EXPORT_NAME-$CI_JOB_NAME
-    paths:
-      - build/web
-
-# GitHub Pages Deploy
-deploy-github-pages:
-  stage: deploy
-  dependencies:
-    - web
-  script:
-    # This ensures the `gh-pages` branch is available.
-    - git fetch
-    - git checkout gh-pages
-    - rm -f *.md
-    - mv build/web/** .
-    - git config user.email $GIT_EMAIL
-    - git config user.name $GIT_USERNAME
-    - git remote add github $REMOTE_URL
-    - git add -A
-    - 'git commit -m "ci: Deploy GitHub Page | $EXPORT_NAME:$CI_JOB_NAME" -m "Deploy from GitLab pipeline #$CI_PIPELINE_ID" || true'
-    - git push github gh-pages -f
+jobs:
+  export-web:
+    name: Web Export
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:3.3.4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/templates
+          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+      - name: Web Build
+        run: |
+          mkdir -v -p build/web
+          # cd $EXPORT_NAME
+          # godot -v --export "HTML5" ../build/web/index.html
+          godot -v --export "HTML5" ./build/web/index.html
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: web
+          path: build/web
+      - name: Install rsync 📚
+        run: |
+          apt-get update && apt-get install -y rsync
+      - name: Deploy to GitHub Pages 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build/web # The folder the action should deploy.
 
