--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -26,6 +26,7 @@ jobs:
           # cd $EXPORT_NAME
           # godot -v --export "HTML5" ../build/web/index.html
           godot -v --export "HTML5" ./build/web/index.html
+          touch ./build/web/.nojekyll
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
